# a2a-blog-writer

./: .env.example  .gitignore  pyproject.toml
client/: __main__.py  config.py  constants.py  prompts.py
client/utils/: logger.py
package/: README.md
server/: __main__.py  config.py
server/agents/: __init__.py  blog_writer_agent.py  content_writer_agent.py  outline_generator_agent.py  topic_research_agent.py
server/utils/: logger.py
server/utils/helpers/: __init__.py  blog_helpers.py
