[project]
name = "a2a-blog-writer"
version = "0.1.0"
description = "Blog Writer using A2A and LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a",
    "click>=8.2.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
a2a = { path = "package/build/a2a-0.2.0-py3-none-any.whl" }
